# TotalMap

./: LICENSE  README.md  TotalMap.cabal  stack.yaml
app/: Main.hs
src/Data/: TotalMap.hs
test/: Spec.hs  TotalMapSpec.hs
