name:                TotalMap
version:             0.1.0.0
synopsis:            A map with values defined for every key
description:         A map with values defined for every key
homepage:            http://github.com/blargg/TotalMap#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Jankauski
maintainer:          tomjankauski@gmail.com
copyright:           2016 Tom Jankauski
category:            other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.TotalMap
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , these
  default-language:    Haskell2010

executable TotalMap-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TotalMap
  default-language:    Haskell2010

test-suite TotalMap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , TotalMap
                     , containers
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
                     , checkers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blargg/TotalMap
